lib_LIBRARIES = libmanybody.a
libmanybody_a_SOURCES = bitsethack.hpp \
	BitsetSlater.hpp \
	CSF.hpp \
	CSF.cc \
	linalg.hpp \
	simple_linalg.hpp simple_matrix.hpp simple_vector.hpp \
	gauss_tools.hpp \
	gauss_tools.cc \
	MatrixMachine.hpp \
	NChooseK.hpp \
	NChooseKBitset.hpp \
	Slater.hpp \
	sparse.hpp \
	timer.hpp \
	tools.hpp \
	main_page.hpp
libmanybody_a_includedir = $(includedir)/manybody
libmanybody_a_include_HEADERS = CSF.hpp linalg.hpp gauss_tools.hpp MatrixMachine.hpp NChooseK.hpp \
	NChooseKBitset.hpp BitsetSlater.hpp Slater.hpp sparse.hpp timer.hpp tools.hpp \
	simple_linalg.hpp simple_vector.hpp simple_matrix.hpp main_page.hpp

